--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 body::-webkit-scrollbar {
   display: none;
 }
+
+::-webkit-scrollbar {
+  height: 15px;
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 25px;
+  background-color: #cfcfcf;
+}
